--- a/MVCGit/MVCGit/Views/Home/Contact.cshtml
+++ b/MVCGit/MVCGit/Views/Home/Contact.cshtml
@@ -4,6 +4,7 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 <h1>This is a contact page</h1>
+<h1>This is from githun</h1>
 
 <address>
     One Microsoft Way<br />
